<resources>
    <string name="app_name">Ambler Walk Buddy</string>
    <string name="title_list">List</string>
    <string name="title_map">Map</string>
    <string name="title_my_status">My Status</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="my_name">George</string>
    <string name="your_status_is">click to change your status</string>
    <string name="on_line">On Line</string>
    <string name="off_line">Off Line</string>
    <string name="online_message">you are now receive request</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_ambler_walk_buddy">Ambler Walk Buddy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
